--- a/.github/workflows/Blogsite-DB-Backup-script.yml
+++ b/.github/workflows/Blogsite-DB-Backup-script.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Run backup script
       run: |
-        python backup_script.py
+        python main.py
       env:
         DB_URL: ${{ secrets.DB_URL }}
         DB_USER: ${{ secrets.DB_USER }}
